# qiitto-desktop

./: .gitignore  LICENSE  README.md  install-helper.command  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
scripts/: install.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_platform.sql
src-tauri/src/: claude_api.rs  claude_log.rs  error.rs  keyring_store.rs  lib.rs  main.rs  qiita_api.rs  updater.rs
src/components/: PublishModal.tsx  QiitaPreview.tsx  RewriteModal.tsx  ScanModal.tsx  TweetModal.tsx  qiita-preview.css
src/lib/: api.ts  db.ts  scanner.ts
src/pages/: Dashboard.tsx  DraftEditor.tsx  Drafts.tsx  Generate.tsx  Published.tsx  Settings.tsx
