[package]
name = "qiitto-desktop"
version = "0.1.0"
description = "qiitto-desktop — Generate Qiita articles from Claude Code dev logs (Tauri 2 + React + Rust)"
authors = ["Cotton-Web 山田英紀"]
edition = "2021"
license = "MIT"
repository = "https://github.com/cotton1101/qiitto-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qiitto_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
keyring = "3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
regex = "1.12.3"
dirs = "6.0.0"

